Fixed visibility

--- a/css/common.css
+++ b/css/common.css
@@ -348,12 +348,13 @@ button {
 .panel-default .attrEntry label,
 .panel-default .entry .entry-item .password-label > label {
   opacity: 0;
+  display: none;
   color: var(--oxitec-primary);
   background-color: #fff;
-  font-size: 12px;
-  line-height: 3px;
-  padding: 0 4px;
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
+  font-size: 14px;
+  margin-bottom: 4px;
+  line-height: 18px;
 }
 
 .panel-default .DropdownSingleSelect .attrEntry label {
@@ -366,6 +367,7 @@ button {
 .panel-default .attrEntry.filled > label,
 .panel-default .entry .entry-item.filled .password-label > label {
   opacity: 1;
+  display: inline-block;
 }
 
 @media only screen and (min-width: 768px) {
